[tool.poetry]
name = "emma-perception"
version = "0.1.0"
description = ""
authors = ["Amit Parekh <amit.parekh@hw.ac.uk>"]
readme = "README.md"
repository = "https://github.com/emma-simbot/perception"

packages = [{ include = "src" }]

[tool.poe]
envfile = ".env"

[tool.poe.tasks]
format = { cmd = "pre-commit run --all-files", help = "Format using pre-commit hooks" }
typecheck = { cmd = "mypy .", help = "Check types with mypy" }
lint = { cmd = "flake8 .", help = "Lint with flake8" }
test = { cmd = "pytest --cov=src -m 'not slow'", help = "Run fast Python tests" }
cov-export = "pytest --cov=src --cov-report xml:coverage.xml"
## PyTorch with CUDA 11.1. If PyTorch is imported first, importing Tensorflow will detect CUDA + cuDNN bundled with PyTorch
## See https://github.com/python-poetry/poetry/issues/2543
force-cuda11 = "pip install torch==1.10.0+cu111 torchvision==0.11.1+cu111 -f https://download.pytorch.org/whl/torch_stable.html"


[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.0"
pytorch-lightning = "^1.5.10"
torchvision = "^0.11.1"
wandb = "^0.12.11"
torchmetrics = "^0.7.2"
hydra-core = "^1.1.1"
hydra-colorlog = "^1.1.0"
transformers = "^4.17.0"
pydantic = { extras = ["dotenv"], version = "^1.9.0" }
rich = "^11.2.0"
overrides = "^6.1.0"
plotly = "^5.6.0"
scikit-learn = "^1.0.2"
opencv-python = "^4.5.5"


[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.0"
flake8 = "^4.0"
mypy = "^0.931"
pytest = "^6.2.5"
ipykernel = "^6.9.1"
pre-commit = "^2.17.0"
poethepoet = "^0.13.1"
pytest-cov = "^3.0.0"
jupyterlab = "^3.3.0"
pudb = "^2022.1"
isort = "^5.10.1"
pytest-cases = "^3.6.9"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
combine_as_imports = true
lines_after_imports = 2
line_length = 99
known_first_party = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
