[tool.poetry]
name = "emma-perception"
version = "1.9.0"
description = ""
authors = ["Amit Parekh <amit.parekh@hw.ac.uk>"]
readme = "README.md"
repository = "https://github.com/emma-simbot/perception"

packages = [{ include = "emma_perception", from = "src" }]

[tool.poe]
envfile = ".env"

[tool.poe.poetry_hooks]
post_install = "postinstall"

[tool.poe.tasks]

[tool.poe.tasks.format]
help = "Format using the pre-commit hooks"
cmd = "pre-commit run --all-files"

[tool.poe.tasks.typecheck]
help = "Check types with mypy"
cmd = "mypy ."

[tool.poe.tasks.lint]
help = "Lint with flake8"
cmd = "flake8 ."

[tool.poe.tasks.test]
help = "Run the fast Python tests"
cmd = "pytest --cov=src -m 'not slow'"

[tool.poe.tasks.test-everything]
help = "Run all the tests and get the coverage"
cmd = "pytest -v --junitxml=pytest.xml --cov=src -m 'not slow and not multiprocessing'"


[tool.poe.tasks.outdated]
help = 'Show all outdated top-level dependencies'
shell = """
			poetry show --outdated | grep --file=<(poetry show --tree | grep '^\\w' | sed 's/^\\([^ ]*\\).*/^\\1\\\\s/')
		"""
interpreter = "bash"

[tool.poe.tasks.install-correct-torch-wheel]
## See https://github.com/python-poetry/poetry/issues/2543
help = "Update torch to use the latest CUDA version"
shell = "python scripts/update_torch_cuda.py"

[[tool.poe.tasks.postinstall]]
help = 'Update torch and install maskrcnn-benchmark and scene-graph-benchmark'
shell = """
		pip install git+https://github.com/emma-simbot/scene_graph_benchmark
		"""

[tool.poetry.dependencies]
python = "^3.9"
torch = "~1.10"
pytorch-lightning = "~1.5"
torchvision = "~0.11"
pydantic = { extras = ["dotenv"], version = "^1.9.0" }
rich = "^12.2.0"
overrides = "^6.1.0"
requests = "^2.27.1"
fastapi = "^0.88.0"
h5py = "^3.6.0"
nltk = "^3.7"
joblib = "^1.1.0"
pandas = "^1.4.2"
scipy = "^1.6"
ninja = "^1.10.2"
yacs = "^0.1.8"
Cython = "^0.29.28"
tqdm = "^4.64.0"
numpy = "<1.24"
einops = "^0.4.1"
timm = "^0.5.4"
pycocotools = "^2.0.4"
cityscapesScripts = "^2.2.0"
opencv-python = "^4.5.5"
emma-common = {git = "https://github.com/emma-simbot/common"}
orjson = "^3.8.3"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.16.1"
flake8 = "^4.0"
mypy = "^0.942"
pytest = "^7.1.2"
ipykernel = "^6.13.0"
pre-commit = "^2.18.1"
poethepoet = "^0.13.1"
pytest-cov = "^3.0.0"
pudb = "^2022.1"
isort = "^5.10.1"
pytest-cases = "^3.6.11"
types-requests = "^2.27.16"

[tool.poetry.group.random.dependencies]
jupyterlab = "^3.3.3"
jupyter = "^1.0.0"
ipython = "^8.2.0"
matplotlib = "^3.5.1"


[tool.black]
line-length = 99

[tool.isort]
profile = "black"
combine_as_imports = true
lines_after_imports = 2
line_length = 99
known_first_party = ["emma_perception"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
